--- a/wiki/统计.org
+++ b/wiki/统计.org
@@ -14,13 +14,13 @@
  #+END_SRC
 
 * 统计学                                                                :toc:
-- [[#0-问题][0 问题]]
-- [[#1-数学基础][1 数学基础]]
+  - [[#0-问题][0 问题]]
+  - [[#1-数学基础][1 数学基础]]
   - [[#标量向量矩阵张量][标量\向量\矩阵\张量]]
-- [[#2-概率论][2 概率论]]
+  - [[#2-概率论][2 概率论]]
   - [[#贝叶斯定理][贝叶斯定理]]
   - [[#收敛理论][收敛理论]]
-- [[#3-统计理论][3 统计理论]]
+  - [[#3-统计理论][3 统计理论]]
   - [[#t-分布][t 分布]]
   - [[#3-有监督模型][3 有监督模型]]
     - [[#回归模型理论][回归模型理论]]
@@ -87,7 +87,7 @@
     - [[#模型校准][模型校准]]
     - [[#样条方法][样条方法]]
       - [[#光滑样条][光滑样条]]
-- [[#4-统计检验][4 统计检验]]
+  - [[#4-统计检验][4 统计检验]]
   - [[#参数检验][参数检验]]
     - [[#p-值][P 值]]
     - [[#t-检验][T 检验]]
@@ -117,18 +117,18 @@
       - [[#sign-检验][sign 检验]]
       - [[#mcnemar-检验][McNemar 检验]]
   - [[#置换检验][置换检验]]
-- [[#5-模型评估][5 模型评估]]
+  - [[#5-模型评估][5 模型评估]]
   - [[#vif][VIF]]
   - [[#过拟合][过拟合]]
-- [[#6-无监督模型][6 无监督模型]]
+  - [[#6-无监督模型][6 无监督模型]]
   - [[#k-means][k-means]]
     - [[#如何确定-k][如何确定 K?]]
   - [[#gussian-mixture-model][Gussian mixture model]]
   - [[#余弦距离][余弦距离]]
-- [[#7-半监督学习][7 半监督学习]]
-- [[#8-不平衡数据][8 不平衡数据]]
+  - [[#7-半监督学习][7 半监督学习]]
+  - [[#8-不平衡数据][8 不平衡数据]]
   -  [[#smote-算法][SMOTE 算法]]
-- [[#9-机器学习][9 机器学习]]
+  - [[#9-机器学习][9 机器学习]]
   - [[#神经网络][神经网络]]
     - [[#模型估计][模型估计]]
       - [[#softmax-算法][softmax 算法]]
@@ -160,14 +160,14 @@
   - [[#迁移学习][迁移学习]]
   - [[#不平衡数据分类算法][不平衡数据分类算法]]
     - [[#smote][SMOTE]]
-- [[#10-主题学习][10 主题学习]]
+  - [[#10-主题学习][10 主题学习]]
   - [[#变量选择][变量选择]]
   - [[#算法][算法]]
     - [[#em-算法][EM 算法]]
       - [[#为何需要-em-算法][为何需要 EM 算法？]]
       - [[#e-步和-m-步][E 步和 M 步]]
 
-* 0 问题
+** 0 问题
 
 | 模型                | 参数估计 | 优点 | 不足 | 分类/聚类/回归 |
 | logistic            |          |      |      |                |
@@ -220,10 +220,10 @@
 类中心的距离，并将这个样本分到距离最小的聚类中心对应的类中；重新计算它的聚类中心；
 重复上面操作；直到每个样本对应类结果不发生变化。
 
-* 1 数学基础
+** 1 数学基础
 ** 标量\向量\矩阵\张量
  
-* 2 概率论
+** 2 概率论
 ** 贝叶斯定理
 
 贝叶斯公式的一般形式如：$P(A | B)=\frac{P(A \cap B)}{P(B)}$,更为一般的形式为$P\left(A_{i} | B\right)=\frac{P\left(B | A_{i}\right) P\left(A_{i}\right)}{\sum_{j} P\left(B | A_{j}\right) P\left(A_{j}\right)}$.
@@ -253,7 +253,7 @@ $P(A | B)=\frac{P(A \cap B)}{P(B)}$.
 
 可以证明依概率收敛可以推出依分布收敛。
 
-* 3 统计理论
+** 3 统计理论
 ** t 分布
 t 分布并不是仅仅用于小样本（虽然小样本中用的风生水起）中，大样本依旧可以使用。
 
@@ -1820,7 +1820,7 @@ $$
 其中, $\mathbf{U}$ 列向量为 $\mathbf{u}_{k}$, 且 $\mathbf{D}$ 为元素为 $d_{k}$
 的对角矩阵. 
 
-* 4 统计检验
+** 4 统计检验
 ** 参数检验 
 假设检验大致可以分为 3 类： *分布检验，位置检验，散度检验* 。
 
@@ -2356,7 +2356,7 @@ glanced <- map_df(models, broom::glance, .id = "id")
 
 hist(glanced$statistic)
 
-* 5 模型评估
+** 5 模型评估
 ** VIF
 如何计算多重共线性？
 
@@ -2401,7 +2401,7 @@ https://daviddalpiaz.github.io/r4sl/the-caret-package.html
 
 https://juliasilge.com/blog/intro-tidymodels/
 
-* 6 无监督模型
+** 6 无监督模型
 知名的无监督模型包括：一系列的聚类算法，包括 k-平均算法、分层聚类分析、最大期望算法以及可视化和降维算法，包括，主成分分析（PCA）、核主成分分析（kernel PCA）、局部线性嵌入（LLE）、t- 分布随机近邻嵌入（t- SNE）以及关联规则学习，比如，apriori/eclat 等。 
 ** k-means
 ![k-means 算法](https://cdn.mathpix.com/snip/images/TGWnw2YiFVePwUyxk_lvOslHhm4tvsMDZ0cFVeE_PNQ.original.fullsize.png)
@@ -2517,10 +2517,10 @@ $$
 \text { similarity }=\cos (\theta)=\frac{A \cdot B}{\|A\|\|B\|}=\frac{\sum_{i=1}^{n} A_{i} \times B_{i}}{\sqrt{\sum_{i=1}^{n}\left(A_{i}\right)^{2} \times \sqrt{\sum_{i=1}^{n}\left(B_{i}\right)^{2}}}}
 \end{equation}
 
-* 7 半监督学习
+** 7 半监督学习
 有些算法可以处理部分标记的训练数据——通常是大量未标记数据和少量的标记数据。
 
-* 8 不平衡数据
+** 8 不平衡数据
 **  SMOTE 算法
 合成少数类过采样技术，是基于随机过采样的一种改进方按，由于随机过采样采取简单复制
 样本的策略来增加少数类样本，这样容易产生模型过拟合的问题。SMOTE 算法的基本思想是
@@ -2544,7 +2544,7 @@ New=x+rand(0,1) \times (x_{i}-x),i=1,2,\cdots,N
 
 [https://www.cnblogs.com/Determined22/p/5772538.html] 更多的信息可以从这里看到！
 
-* 9 机器学习 
+** 9 机器学习 
 ** 神经网络
 下面这个连接可以清晰地展现神经网络知识。
 
@@ -3704,7 +3704,7 @@ y_pred
 ** 不平衡数据分类算法
 *** SMOTE
 
-* 10 主题学习 
+** 10 主题学习 
 ** 变量选择 
 
 - 绕封法：不断增加或删除预测变量，通过评估包含不同变量的模型找到最优的变量组合。
