--- a/life/gtd.org
+++ b/life/gtd.org
@@ -2,12 +2,26 @@
 ** 2020
 *** 09
 **** week2
-***** 进行中 v656,v657 模型比对
+***** DONE 进行中 v656,v657 模型比对
+      CLOSED: [2020-09-17 Thu 11:14]
       :LOGBOOK:
+      - State "DONE"       from              [2020-09-17 Thu 11:14]
       - State "进行中"     from              [2020-09-16 Wed 14:21]
       :END:
-***** STARTED 跟踪模型上线进度 
-      SCHEDULED: <2020-09-16 Wed>
+***** DONE 跟踪模型上线进度 
+      CLOSED: [2020-09-17 Thu 11:14] SCHEDULED: <2020-09-16 Wed>
       :LOGBOOK:
+      - State "DONE"       from "STARTED"    [2020-09-17 Thu 11:14]
       CLOCK: [2020-09-16 Wed 15:12]
       :END:
+***** STARTED 继续学习 spline
+      SCHEDULED: <2020-09-16 Wed>
+***** SOMEDAY 继续学习 org-mode(实在是太优秀了) 
+      SCHEDULED: <2020-09-16 Wed>
+***** DONE 了解 color-rg
+      CLOSED: [2020-09-17 Thu 11:15]
+      :LOGBOOK:
+      - State "DONE"       from "SOMEDAY"    [2020-09-17 Thu 11:15]
+      :END:
+***** STARTED 了解 lispy,lispyville 
+      SCHEDULED: <2020-09-17 Thu>
