--- a/wiki/python_wiki.org
+++ b/wiki/python_wiki.org
@@ -559,6 +559,55 @@ s3(5)
 
 partial() 函数允许你给一个或多个参数设置固定的值，减少接下来被调用时的参数个数。
 
+- 带额外状态信息的回调函数
+  
+你的代码中需要依赖到回调函数的使用(比如事件处理器、等待后台任务完成后的回调等)， 并且你还需要让回调函数拥有额外的状态值，以便在它的内部使用到。
+#+begin_src python
+def apply_async(func, args, *, callback):
+    result = func(*args)
+    callback(result)
+
+def print_result(result):
+    print('Got:', result)
+
+def add(x,y):
+    return x+y
+
+apply_async(add, (2, 3), callback=print_result)
+# Got: 5
+#+end_src
+
+- 访问闭包中定义的变量
+
+#+begin_src python
+def sample():
+    n = 0
+    def func():
+        print('n=', n)
+    def get_n():
+        return n
+    def set_n(value):
+        nonlocal n
+        n = value
+    func.get_n = get_n
+    func.set_n = set_n
+    return func
+
+f =sample()
+f()
+# n= 0
+f.set_n(10)
+f()
+# n= 10
+f.get_n()
+# 10
+#+end_src
+
+为了说明清楚它如何工作的，有两点需要解释一下。首先，nonlocal 声明可以让我们编写函数来修改内部变量的值。其次，函数属性允许我们用一种很简单的方式将访问方法绑定到闭包函数上，这个跟实例方法很像(尽管并没有定义任何类)。
+
+
+
+
 *** set
 集合，是 python 一种数据类型，可以去重。
 #+begin_src python
