--- a/wiki/vim_wiki.org
+++ b/wiki/vim_wiki.org
@@ -29,4 +29,6 @@ S<char><char> 往后跳转到目标位置。
 | C-b  | page up   |
 
 
-
+工作模式切换：
+在普通模式下输入 i(插入)、c(修改)、o(另起一行) 命令时进入编辑模式；按 esc 键退回到普通模式。
+在普通模式下输入冒号(:)可以进入命令模式。输入完命令按回车，命令执行完后会自动退回普通模式。
