--- a/wiki/统计.org
+++ b/wiki/统计.org
@@ -1720,8 +1720,7 @@ f ( X ) = \sum_{ m = 1 } ^ { M } \beta _ { m } h _ { m } ( X )
 E(y)=\beta_{0}+\beta_{1} x+\beta_{2} x^{2}+\Lambda+\beta_{d} x^{d}
 \end{equation}
 
-多项式函数的形式可以认为是由多个单项式构成{$\beta_{1}x,\beta_{2}x^2,x^{3}$}。现
-在，我们可以把每一项都换成一个关于自变量 $x$ 的函数 $b_{j}(x)$:
+多项式函数的形式可以认为是由多个单项式构成{$\beta_{1}x,\beta_{2}x^2,x^{3}$}。现在，我们可以把每一项都换成一个关于自变量 $x$ 的函数 $b_{j}(x)$:
 
 那么样条函数就是
 
@@ -1733,11 +1732,9 @@ $$
 
 $d$ 为节点的个数， $q$ 表示多项式的最高次数。
 
-样条方法的初衷，不就是将线性模型拓展到超线性吗，而这种超线性的体现在于可加的分量
-是 $h(X)$, 是原始变量 $X$ 的某个变换，比如样条基.
+样条方法的初衷是将线性模型拓展到超线性而这种超线性的体现在于可加的分量是 $h(X)$, 是原始变量 $X$ 的某个变换，比如样条基.
 
-简单的样条函数真的很好理解，就是分段函数，但是样条，特别是光滑样条的特点在于分段
-函数是连续的，而且可以是光滑样条，就是可以二阶导。
+简单的样条函数真的很好理解，就是分段函数，但是样条，特别是光滑样条的特点在于分段函数是连续的，而且可以是光滑样条，就是可以二阶导。
 
 **** 光滑样条 
 对应光滑样条的方法是线性样条, 线性样条的方差更大, 而光滑样条方差较小.
