--- a/life/gtd.org
+++ b/life/gtd.org
@@ -31,3 +31,4 @@
       SCHEDULED: <2020-09-17 Thu>
 ***** STARTED 不看斗音
       SCHEDULED: <2020-09-17 Thu>
+***** TODO 补充 v656 2020-09-01-0916 模型分, 补充 20200807  
